# luciai-studio

./: .gitignore  DEPLOYMENT.md  DEVELOPER_GUIDE.md  INSTALLATION.md  PROJECT_STATUS.md  README.md  TESTING.md  build_log.txt  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
docsversions/: LUCIAI_STUDIO_V2.0_SUMMARY.md  LUCIAI_STUDIO_V2.1_COMPLETE.md  START_HERE_V2.1.md  START_HERE_V2.2.md  V2.0_SESSION_COMPLETE.md  V2.1_MASTER_HANDOFF.md  V2.2_MASTER_HANDOFF.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build_output.txt  check_output.txt  final_check.txt  output_cache.txt  output_cache_2.txt  tauri.conf.json  test_output.txt  test_result.txt
src-tauri/.cargo/: config.toml
src-tauri/[object Object]/: README.md  package.json
src-tauri/[object Object]/app/: layout.tsx  page.tsx
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  cloud_llm.rs  code_review.rs  database.rs  debugging.rs  filesystem.rs  git.rs  git_advanced.rs  lib.rs  license.rs  llm.rs  main.rs  notifications.rs  performance.rs  plugins.rs  preferences.rs  profiler.rs  project.rs  shortcuts.rs  snippets.rs  templates.rs  terminal.rs  testing.rs  themes.rs  updater.rs  window.rs
src-tauri/src/agent/: deployment.rs  mod.rs  pipeline.rs  refactorer.rs  test_generator.rs  validator.rs
src-tauri/src/llm/: client.rs  gemini.rs  mod.rs  ollama.rs
src-tauri/src/templates/: cache.rs  core.rs  mod.rs  network.rs
templates/: additional_templates.ts  backend_advanced.ts  final_templates.ts  new_templates.ts  (+2 more)
(+112 files in other folders)
